Framework: remove one overload of 'parse'
This is much more straightforward, especially now that helper class
'Input' gives a lot of direct flexibility.